nullaway_error_DCE615C2-A75D-42D4-A717-06D54AB73DCA.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/server/session/DefaultWebSessionManager.java:119: error: [NullAway] dereferenced expression session.getId() is @Nullable
		if (ids.isEmpty() || !session.getId().equals(ids.get(0))) {
		                                     ^
    (see http://t.uber.com/nullaway )
